# Android_WindowsRemote_UDP

./: LICENSE  README.md
DesktopMouseController_Android/app/: build.gradle
DesktopMouseController_Android/app/src/androidTest/java/com/personal/bourdi_b/desktopmousecontroller/: ApplicationTest.java
DesktopMouseController_Android/app/src/main/: AndroidManifest.xml
DesktopMouseController_Android/app/src/main/java/com/personal/bourdi_b/desktopmousecontroller/: BroadcastMessage.java  BroadcastMessageFactory.java  BroadcastMessageQueue.java  MainActivity.java  MyDeltaPoint.java  MyPoint.java  NetworkRunner.java
DesktopMouseController_Android/app/src/main/res/layout/: activity_main.xml
DesktopMouseController_Android/app/src/main/res/values/: ids.xml  strings.xml
DesktopMouseController_Windows/: CMakeLists.txt  gen_VS12_x64_with_patch_solution_release.bat
DesktopMouseController_Windows/ClientTest/: CMakeLists.txt  main.c
DesktopMouseController_Windows/Jsmn/: CMakeLists.txt
DesktopMouseController_Windows/ServerMouseController/: CMakeLists.txt  error_handling.c  error_handling.h  json_msg_parser.c  json_msg_parser.h  main.c  main_loop.c  main_loop.h  mouse_controller.c  mouse_controller.h  network.c  network.h  server.c  server.h
DesktopMouseController_Windows/Service/: CMakeLists.txt  main.c
